# Projgen

./: .gitignore  LICENSE  README.md  fastapi.yaml  fastapi_proj.json  pyproject.toml
projgen/: __init__.py  cli.py  core.py
