[project]
name = "projgen"
version = "0.3.1"
description = "A CLI tool to scaffold project directory structures from JSON or YAML files"
authors = [{ name = "Avinash Kumar Prajapati", email = "aviavi61106@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cli", "scaffold", "project-structure", "generator", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

# No hard runtime dependencies — JSON is built-in.
# YAML is optional; install via the [yaml] extra.
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev  = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "PyYAML>=6.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage   = "https://github.com/avinash-kumar-prajapati-AI/Python/tree/main/projgen"
Repository = "https://github.com/avinash-kumar-prajapati-AI/Python"
Issues     = "https://github.com/avinash-kumar-prajapati-AI/Python/issues"

[project.scripts]
projgen = "projgen.cli:main"

[build-system]
requires      = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["projgen*"]

# ---------------------------------------------------------------------------
# Ruff linter/formatter config
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest config
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short --cov=projgen --cov-report=term-missing"
filterwarnings = ["error::DeprecationWarning"]

# ---------------------------------------------------------------------------
# mypy config
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.8"
strict                 = true
ignore_missing_imports = true